--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,8 @@
-annotated-types==0.7.0
-anyio==4.4.0
-argcomplete==2.0.0
-Beaker==1.12.1
-beautifulsoup4==4.12.3
-blivet==3.8.2
-blivet-gui==2.5.0
-Brlapi==0.8.5
-certifi==2024.7.4
-cffi==1.15.1
-charset-normalizer==3.3.2
-click==8.1.3
-cryptography==41.0.7
-cupshelpers==1.0
-dasbus==1.7
-dbus-python==1.3.2
-distlib==0.3.6
-distro==1.8.0
-dnf==4.21.0
-Faker==26.1.0
-fedora-third-party==0.10
-file-magic==0.4.0
-filelock==3.12.2
-Flask==2.2.5
-Flask-Cors==4.0.1
-fros==1.1
-fsspec==2024.6.1
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.24.5
-humanize==3.13.1
-idna==3.7
-itsdangerous==2.1.2
-Jinja2==3.1.4
-jiter==0.5.0
-joblib==1.4.2
-langtable==0.0.68
-libcomps==0.1.20
-libdnf==0.73.2
-lxml==4.9.3
-Mako==1.2.3
-MarkupSafe==2.1.3
-mpmath==1.3.0
-mysql-connector-python==9.0.0
-mysqlclient==2.1.1
-networkx==3.3
-nftables==0.1
-numpy==2.0.1
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.6.20
-nvidia-nvtx-cu12==12.1.105
-olefile==0.46
-openai==1.40.3
-packaging==23.1
-Paste==3.5.3
-pexpect==4.8.0
-pid==2.2.3
-pillow==10.4.0
-platformdirs==3.9.1
-ply==3.11
-productmd==1.38
-ptyprocess==0.7.0
-pwquality==1.4.5
-pycairo==1.25.1
-pycparser==2.20
-pycrypto==2.6.1
-pycups==2.0.4
-pycurl==7.45.2
-pydantic==2.8.0
-pydantic_core==2.20.0
-pyenchant==3.2.2
-PyGObject==3.46.0
-pykickstart==3.48
-pyOpenSSL==23.2.0
-pyparted==3.13.0
-PySocks==1.7.1
-python-augeas==1.1.0
-python-dateutil==2.8.2
-python-dotenv==0.21.1
-python-meh==0.51
-pyudev==0.24.1
-pyxdg==0.27
-PyYAML==6.0.1
-regex==2024.4.16
-requests==2.28.2
-requests-file==1.5.1
-requests-ftp==0.3.1
-rpm==4.19.1.1
-safetensors==0.4.4
-scikit-learn==1.5.1
-scipy==1.14.0
-selinux @ file:///builddir/build/BUILD/libselinux-3.5/src
-sentence-transformers==3.0.1
-sepolicy @ file:///builddir/build/BUILD/selinux-3.5/python/sepolicy
-setools==4.4.3
-setuptools==67.7.2
-simpleaudio==1.0.4
-simpleline==1.9.0
-six==1.16.0
-sniffio==1.3.1
-sos==4.6.0
-soupsieve==2.5
-sympy==1.13.2
-systemd-python==235
-Tempita==0.5.2
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-torch==2.4.0
-tqdm==4.66.5
-transformers==4.44.0
-triton==3.0.0
-typing_extensions==4.12.2
-urllib3==1.26.19
-virtualenv==20.21.1
-Werkzeug==2.2.3
+fastapi
+uvicorn
+httpx
+pydantic
+flask
+requests
+json
+urllib
