--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ cmnd-extension-fastapi/.env
 cmnd-extension-flask/.env
 cmnd-extension-fastapi/cmnd/constants/__pycache__
 cmnd-extension-flask/cmnd/constants/__pycache__
+src/__pycache__
+src/modules/__pycache__
