--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ cmnd-extension-fastapi/cmnd/constants/__pycache__
 cmnd-extension-flask/cmnd/constants/__pycache__
 src/__pycache__
 src/modules/__pycache__
+src/routes/__pycache__
+static/flow_animate.svg
